--- a/ETL Pipelines/3_sql_exercise/3_sql_exercise.ipynb
+++ b/ETL Pipelines/3_sql_exercise/3_sql_exercise.ipynb
@@ -957,44 +957,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=d0ec54b4-4794-4c85-9af3-29e116305547 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('d0ec54b4-4794-4c85-9af3-29e116305547').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=e7f2d74e-aa92-4ca7-bad0-f94c420071fc style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('e7f2d74e-aa92-4ca7-bad0-f94c420071fc').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Country_Name</th>\n",
        "      <th>1975</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9800700.0</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>358950.0</td>\n",
+       "      <td>Luxembourg</td>\n",
+       "      <td>1975</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "        1975\n",
-       "0  9800700.0\n",
-       "1   358950.0"
+       "  Country_Name  1975\n",
+       "0      Belgium  1975\n",
+       "1   Luxembourg  1975"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_sql('''SELECT \"1975\"\n",
+    "pd.read_sql('''SELECT Country_Name, 1975\n",
     "                FROM population_data \n",
     "                WHERE Country_Name IN (\"Belgium\", \"Luxembourg\") ''', conn)"
    ]
