--- a/ETL Pipelines/4_api_exercise/4_api_exercise.ipynb
+++ b/ETL Pipelines/4_api_exercise/4_api_exercise.ipynb
@@ -64,6 +64,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2291,18 +2295,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'page': 1,\n",
+       "  'pages': 1,\n",
+       "  'per_page': 50,\n",
+       "  'total': 7,\n",
+       "  'sourceid': '2',\n",
+       "  'sourcename': 'World Development Indicators',\n",
+       "  'lastupdated': '2022-02-15'},\n",
+       " [{'indicator': {'id': 'SP.RUR.TOTL', 'value': 'Rural population'},\n",
+       "   'country': {'id': 'CH', 'value': 'Switzerland'},\n",
+       "   'countryiso3code': 'CHE',\n",
+       "   'date': '2001',\n",
+       "   'value': 1924949,\n",
+       "   'unit': '',\n",
+       "   'obs_status': '',\n",
+       "   'decimal': 0},\n",
+       "  {'indicator': {'id': 'SP.RUR.TOTL', 'value': 'Rural population'},\n",
+       "   'country': {'id': 'CH', 'value': 'Switzerland'},\n",
+       "   'countryiso3code': 'CHE',\n",
+       "   'date': '2000',\n",
+       "   'value': 1912232,\n",
+       "   'unit': '',\n",
+       "   'obs_status': '',\n",
+       "   'decimal': 0},\n",
+       "  {'indicator': {'id': 'SP.RUR.TOTL', 'value': 'Rural population'},\n",
+       "   'country': {'id': 'CH', 'value': 'Switzerland'},\n",
+       "   'countryiso3code': 'CHE',\n",
+       "   'date': '1999',\n",
+       "   'value': 1897587,\n",
+       "   'unit': '',\n",
+       "   'obs_status': '',\n",
+       "   'decimal': 0},\n",
+       "  {'indicator': {'id': 'SP.RUR.TOTL', 'value': 'Rural population'},\n",
+       "   'country': {'id': 'CH', 'value': 'Switzerland'},\n",
+       "   'countryiso3code': 'CHE',\n",
+       "   'date': '1998',\n",
+       "   'value': 1884719,\n",
+       "   'unit': '',\n",
+       "   'obs_status': '',\n",
+       "   'decimal': 0},\n",
+       "  {'indicator': {'id': 'SP.RUR.TOTL', 'value': 'Rural population'},\n",
+       "   'country': {'id': 'CH', 'value': 'Switzerland'},\n",
+       "   'countryiso3code': 'CHE',\n",
+       "   'date': '1997',\n",
+       "   'value': 1875299,\n",
+       "   'unit': '',\n",
+       "   'obs_status': '',\n",
+       "   'decimal': 0},\n",
+       "  {'indicator': {'id': 'SP.RUR.TOTL', 'value': 'Rural population'},\n",
+       "   'country': {'id': 'CH', 'value': 'Switzerland'},\n",
+       "   'countryiso3code': 'CHE',\n",
+       "   'date': '1996',\n",
+       "   'value': 1866968,\n",
+       "   'unit': '',\n",
+       "   'obs_status': '',\n",
+       "   'decimal': 0},\n",
+       "  {'indicator': {'id': 'SP.RUR.TOTL', 'value': 'Rural population'},\n",
+       "   'country': {'id': 'CH', 'value': 'Switzerland'},\n",
+       "   'countryiso3code': 'CHE',\n",
+       "   'date': '1995',\n",
+       "   'value': 1854939,\n",
+       "   'unit': '',\n",
+       "   'obs_status': '',\n",
+       "   'decimal': 0}]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: get the url ready\n",
-    "url = None\n",
+    "url = 'http://api.worldbank.org/v2/countries/ch/indicators/SP.RUR.TOTL/?format=json&date=1995:2001'\n",
     "\n",
     "# TODO: send the request\n",
-    "r = None\n",
+    "r = requests.get(url)\n",
     "\n",
-    "# TODO: output the json using the json method like in the previous example"
+    "# TODO: output the json using the json method like in the previous example\n",
+    "r.json()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
