--- a/ETL Pipelines/5_combinedata_exercise/5_combining_data.ipynb
+++ b/ETL Pipelines/5_combinedata_exercise/5_combining_data.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=73eb98bc-1802-41e3-b5d5-8287becc735f style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('73eb98bc-1802-41e3-b5d5-8287becc735f').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=6a75e725-aabd-404d-ad50-129691111665 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('6a75e725-aabd-404d-ad50-129691111665').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -98,6 +98,7 @@
        "      <th>Country Code</th>\n",
        "      <th>Year</th>\n",
        "      <th>Rural_Value</th>\n",
+       "      <th>Electricity_Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -107,6 +108,7 @@
        "      <td>AFG</td>\n",
        "      <td>1960</td>\n",
        "      <td>91.779</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>265</th>\n",
@@ -114,6 +116,7 @@
        "      <td>AFG</td>\n",
        "      <td>1961</td>\n",
        "      <td>91.492</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>529</th>\n",
@@ -121,6 +124,7 @@
        "      <td>AFG</td>\n",
        "      <td>1962</td>\n",
        "      <td>91.195</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>793</th>\n",
@@ -128,6 +132,7 @@
        "      <td>AFG</td>\n",
        "      <td>1963</td>\n",
        "      <td>90.890</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1057</th>\n",
@@ -135,20 +140,21 @@
        "      <td>AFG</td>\n",
        "      <td>1964</td>\n",
        "      <td>90.574</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "     Country Name Country Code  Year  Rural_Value\n",
-       "1     Afghanistan          AFG  1960       91.779\n",
-       "265   Afghanistan          AFG  1961       91.492\n",
-       "529   Afghanistan          AFG  1962       91.195\n",
-       "793   Afghanistan          AFG  1963       90.890\n",
-       "1057  Afghanistan          AFG  1964       90.574"
+       "     Country Name Country Code  Year  Rural_Value  Electricity_Value\n",
+       "1     Afghanistan          AFG  1960       91.779                NaN\n",
+       "265   Afghanistan          AFG  1961       91.492                NaN\n",
+       "529   Afghanistan          AFG  1962       91.195                NaN\n",
+       "793   Afghanistan          AFG  1963       90.890                NaN\n",
+       "1057  Afghanistan          AFG  1964       90.574                NaN"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,22 +176,22 @@
     "\n",
     "# TODO: merge the data frames together based on their common columns\n",
     "# in this case, the common columns are Country Name, Country Code, and Year\n",
-    "df_rural.merge(df_electricity, on=['Country Code', 'Year'])\n",
+    "df_merge = df_rural.merge(df_electricity, on=['Country Name','Country Code', 'Year'])\n",
     "# TODO: sort the results by country and then by year\n",
     "\n",
-    "df_combined = df_rural.sort_values(['Country Name', 'Year'])\n",
+    "df_combined = df_merge.sort_values(['Country Name', 'Year'])\n",
     "df_combined.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=3b0bf469-c234-4111-b09f-36289f5411d4 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('3b0bf469-c234-4111-b09f-36289f5411d4').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=978fb340-de4e-46d5-93c4-508cf8089cff style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('978fb340-de4e-46d5-93c4-508cf8089cff').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -193,6 +199,7 @@
        "      <th>Country Code</th>\n",
        "      <th>Year</th>\n",
        "      <th>Rural_Value</th>\n",
+       "      <th>Electricity_Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -202,6 +209,7 @@
        "      <td>AFG</td>\n",
        "      <td>1960</td>\n",
        "      <td>91.779</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>265</th>\n",
@@ -209,6 +217,7 @@
        "      <td>AFG</td>\n",
        "      <td>1961</td>\n",
        "      <td>91.492</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>529</th>\n",
@@ -216,6 +225,7 @@
        "      <td>AFG</td>\n",
        "      <td>1962</td>\n",
        "      <td>91.195</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>793</th>\n",
@@ -223,6 +233,7 @@
        "      <td>AFG</td>\n",
        "      <td>1963</td>\n",
        "      <td>90.890</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1057</th>\n",
@@ -230,9 +241,11 @@
        "      <td>AFG</td>\n",
        "      <td>1964</td>\n",
        "      <td>90.574</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -244,6 +257,7 @@
        "      <td>ZWE</td>\n",
        "      <td>2013</td>\n",
        "      <td>67.346</td>\n",
+       "      <td>37.076813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14519</th>\n",
@@ -251,6 +265,7 @@
        "      <td>ZWE</td>\n",
        "      <td>2014</td>\n",
        "      <td>67.499</td>\n",
+       "      <td>32.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14783</th>\n",
@@ -258,6 +273,7 @@
        "      <td>ZWE</td>\n",
        "      <td>2015</td>\n",
        "      <td>67.624</td>\n",
+       "      <td>33.700000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15047</th>\n",
@@ -265,6 +281,7 @@
        "      <td>ZWE</td>\n",
        "      <td>2016</td>\n",
        "      <td>67.723</td>\n",
+       "      <td>38.145138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15311</th>\n",
@@ -272,28 +289,29 @@
        "      <td>ZWE</td>\n",
        "      <td>2017</td>\n",
        "      <td>67.793</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "      Country Name Country Code  Year  Rural_Value\n",
-       "1      Afghanistan          AFG  1960       91.779\n",
-       "265    Afghanistan          AFG  1961       91.492\n",
-       "529    Afghanistan          AFG  1962       91.195\n",
-       "793    Afghanistan          AFG  1963       90.890\n",
-       "1057   Afghanistan          AFG  1964       90.574\n",
-       "...            ...          ...   ...          ...\n",
-       "14255     Zimbabwe          ZWE  2013       67.346\n",
-       "14519     Zimbabwe          ZWE  2014       67.499\n",
-       "14783     Zimbabwe          ZWE  2015       67.624\n",
-       "15047     Zimbabwe          ZWE  2016       67.723\n",
-       "15311     Zimbabwe          ZWE  2017       67.793\n",
+       "      Country Name Country Code  Year  Rural_Value  Electricity_Value\n",
+       "1      Afghanistan          AFG  1960       91.779                NaN\n",
+       "265    Afghanistan          AFG  1961       91.492                NaN\n",
+       "529    Afghanistan          AFG  1962       91.195                NaN\n",
+       "793    Afghanistan          AFG  1963       90.890                NaN\n",
+       "1057   Afghanistan          AFG  1964       90.574                NaN\n",
+       "...            ...          ...   ...          ...                ...\n",
+       "14255     Zimbabwe          ZWE  2013       67.346          37.076813\n",
+       "14519     Zimbabwe          ZWE  2014       67.499          32.300000\n",
+       "14783     Zimbabwe          ZWE  2015       67.624          33.700000\n",
+       "15047     Zimbabwe          ZWE  2016       67.723          38.145138\n",
+       "15311     Zimbabwe          ZWE  2017       67.793                NaN\n",
        "\n",
-       "[15312 rows x 4 columns]"
+       "[15312 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
