--- a/ETL Pipelines/5_combinedata_exercise/5_combining_data-solution.ipynb
+++ b/ETL Pipelines/5_combinedata_exercise/5_combining_data-solution.ipynb
@@ -2547,9 +2547,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-anaconda3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2561,9 +2561,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
