finish cleaning data4

--- a/ETL Pipelines/7_datatypes_exercise/7_datatypes_exercise-solution.ipynb
+++ b/ETL Pipelines/7_datatypes_exercise/7_datatypes_exercise-solution.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country Name       object\n",
+       "Country Code       object\n",
+       "Indicator Name     object\n",
+       "Indicator Code     object\n",
+       "1960              float64\n",
+       "                   ...   \n",
+       "2013              float64\n",
+       "2014              float64\n",
+       "2015              float64\n",
+       "2016              float64\n",
+       "2017              float64\n",
+       "Length: 62, dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this code cell \n",
     "df_indicator.dtypes"
@@ -58,9 +80,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country Name    CanadaMexicoUnited States\n",
+       "1960                          236754121.0\n",
+       "1961                          241356126.0\n",
+       "1962                          245801588.0\n",
+       "1963                          250145880.0\n",
+       "1964                          254478272.0\n",
+       "1965                          258604043.0\n",
+       "1966                          262619038.0\n",
+       "1967                          266553812.0\n",
+       "1968                          270344019.0\n",
+       "1969                          274128481.0\n",
+       "1970                          278405861.0\n",
+       "1971                          283025259.0\n",
+       "1972                          287367782.0\n",
+       "1973                          291558995.0\n",
+       "1974                          295716280.0\n",
+       "1975                          300054399.0\n",
+       "1976                          304176763.0\n",
+       "1977                          308380884.0\n",
+       "1978                          312660488.0\n",
+       "1979                          317041689.0\n",
+       "1980                          321178871.0\n",
+       "1981                          325358195.0\n",
+       "1982                          329468533.0\n",
+       "1983                          333444548.0\n",
+       "1984                          337307605.0\n",
+       "1985                          341226707.0\n",
+       "1986                          345271125.0\n",
+       "1987                          349342052.0\n",
+       "1988                          353477919.0\n",
+       "1989                          357895891.0\n",
+       "1990                          362771874.0\n",
+       "1991                          368224194.0\n",
+       "1992                          373861907.0\n",
+       "1993                          379352863.0\n",
+       "1994                          384587053.0\n",
+       "1995                          389677579.0\n",
+       "1996                          394753352.0\n",
+       "1997                          399925939.0\n",
+       "1998                          404923356.0\n",
+       "1999                          409839779.0\n",
+       "2000                          414651784.0\n",
+       "2001                          419117923.0\n",
+       "2002                          423342801.0\n",
+       "2003                          427424386.0\n",
+       "2004                          431795881.0\n",
+       "2005                          436300827.0\n",
+       "2006                          441042795.0\n",
+       "2007                          445955481.0\n",
+       "2008                          451001548.0\n",
+       "2009                          455905328.0\n",
+       "2010                          460662636.0\n",
+       "2011                          465077077.0\n",
+       "2012                          469572124.0\n",
+       "2013                          473922844.0\n",
+       "2014                          478379473.0\n",
+       "2015                          482763301.0\n",
+       "2016                          487210962.0\n",
+       "2017                          491590537.0\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Calculate the population sum by year for Canada,\n",
     "#       the United States, and Mexico.\n",
