finish cleaning data5

--- a/ETL Pipelines/7_datatypes_exercise/7_datatypes_exercise.ipynb
+++ b/ETL Pipelines/7_datatypes_exercise/7_datatypes_exercise.ipynb
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,11 +747,42 @@
     "\n",
     "# Step 1: Remove the commas from the 'totalamt' column\n",
     "# HINT: https://pandas.pydata.org/pandas-docs/version/0.22/generated/pandas.Series.str.replace.html\n",
-    "\n",
+    "#df_projects['totalamt'] = df_projects['totalamt'].str.replace(',', '')\n",
     "# Step 2: Convert the 'totalamt' column from an object data type (ie string) to an integer data type.\n",
     "# HINT: https://pandas.pydata.org/pandas-docs/version/0.23/generated/pandas.to_numeric.html\n",
     "\n",
-    "df_projects['totalamt'] = df_projects['totalamt']"
+    "df_projects['totalamt'] = pd.to_numeric(df_projects['totalamt'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                0\n",
+       "1        200000000\n",
+       "2         58330000\n",
+       "3         20000000\n",
+       "4        100000000\n",
+       "           ...    \n",
+       "18243     13500000\n",
+       "18244     12000000\n",
+       "18245     40000000\n",
+       "18246    195000000\n",
+       "18247    250000000\n",
+       "Name: totalamt, Length: 18248, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_projects['totalamt']"
    ]
   },
   {
