finish cleaning data7

--- a/ETL Pipelines/9_encodings_exercise/9_encodings_exercise.ipynb
+++ b/ETL Pipelines/9_encodings_exercise/9_encodings_exercise.ipynb
@@ -75,9 +75,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The encdoing of mystery.csv is utf_16_le\n",
+      "The encdoing of mystery.csv is cp1026\n",
+      "The encdoing of mystery.csv is utf_16\n",
+      "The encdoing of mystery.csv is utf_16_be\n",
+      "The encdoing of mystery.csv is cp273\n",
+      "The encdoing of mystery.csv is cp1140\n",
+      "The encdoing of mystery.csv is cp500\n",
+      "The encdoing of mystery.csv is cp037\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Figure out what the encoding is of the myster.csv file\n",
     "# HINT: pd.read_csv('mystery.csv', encoding=?) where ? is the string for an encoding like 'ascii'\n",
@@ -97,7 +112,13 @@
     "# TODO: iterate through the alias_values list trying out the different encodings to see which one or ones work\n",
     "# HINT: Use a try - except statement. Otherwise your code will produce an error when reading in the csv file\n",
     "#       with the wrong encoding.\n",
-    "# HINT: In the try statement, print out the encoding name so that you know which one(s) worked.\n"
+    "# HINT: In the try statement, print out the encoding name so that you know which one(s) worked.\n",
+    "for encoding_name in alias_values:\n",
+    "    try:\n",
+    "        df = pd.read_csv('mystery.csv', encoding = encoding_name)\n",
+    "        print(\"The encdoing of mystery.csv is {}\".format(encoding_name))\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
@@ -115,17 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: chardet in /anaconda3/lib/python3.6/site-packages (3.0.4)\n",
-      "\u001b[31mflask-cors 3.0.3 requires Flask>=0.9, which is not installed.\u001b[0m\n",
-      "\u001b[31mblaze 0.11.3 requires flask>=0.10.1, which is not installed.\u001b[0m\n",
-      "{'encoding': 'UTF-16', 'confidence': 1.0, 'language': ''}\n"
+      "Requirement already satisfied: chardet in /Users/oo/opt/anaconda3/lib/python3.8/site-packages (4.0.0)\n"
      ]
     }
    ],
@@ -136,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +174,13 @@
     "with open(\"mystery.csv\", 'rb') as file:\n",
     "    print(chardet.detect(file.read()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
