--- a/ETL Pipelines/10_imputation_exercise/10_imputations_exercise-solution.ipynb
+++ b/ETL Pipelines/10_imputation_exercise/10_imputations_exercise-solution.ipynb
@@ -381,6 +381,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x7f9088318700>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_melt.sort_values('year').groupby('Country Name')['GDP']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
